Add custome styles to views

--- a/app/views/groups/older_index.html.erb
+++ b/app/views/groups/older_index.html.erb
@@ -31,6 +31,6 @@
   <p class="p-2">category  is empty, Kindly add some</p>
 <% end %>
 
-<div class="text-light footer d-flex justify-content-center p-3">
-  <%= link_to "Add new category", new_group_path, class: 'btn btn-outline-dark' %>
+<div class="menu2 text-light footer d-flex justify-content-center p-3">
+  <%= link_to "Add new category", new_group_path, class: 'btn btn-outline-light' %>
 </div>
