--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -36,7 +36,7 @@
   <% else %>
     <p class="p-2">No purchases added yet for this category</p>
   <% end %>
-  <div class="text-light footer d-flex justify-content-center p-3">
-    <%= link_to "Add new purchases", new_groups_purchase_path, class: 'btn btn-outline-dark' %>
+  <div class="menu2 text-light footer d-flex justify-content-center p-3">
+    <%= link_to "Add new purchases", new_groups_purchase_path, class: 'btn btn-outline-light' %>
   </div>
 </div>
