--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -30,6 +30,6 @@
         <% else %>
           <p class="p-2">No category added yet</p>
         <% end %>
-        <div class="text-light footer d-flex justify-content-center p-3">
-          <%= link_to "Add new category", new_group_path, class: 'btn btn-outline-dark' %>
+        <div class="menu2 text-light footer d-flex justify-content-center p-3">
+          <%= link_to "Add new category", new_group_path, class: 'btn btn-outline-light' %>
         </div>
